--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,268 @@
-.App {
-  text-align: center;
+body {
+  background: url(./img/img11.jpg);
+  background-size: cover;
+  background-position: 340px -130px;
+  opacity: 1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.main {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  text-align: center;
+  padding: 21px;
+  min-height: 90vh;    /*this solved the footer not sticking to bottom problem*/
+  overflow: auto;
+  box-shadow:
+    inset -5px 0 10px #f0f,
+    /* left magenta */
+    inset 3px 0 10px #0ff;
+  /* right cyan */
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.box {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  text-align: center;
+  background-color: #1bad32;
+  color: black;
+  bottom: 0px;
+  width: 100%;
+  display: inline-block;
+}
+
+
+.track{
+  position: absolute;
+  top: 2vh;
+  right: 2vw;
+  color: white;
+}
+
+.track:hover{
+  color: grey;
+}
+
+h1 {
+  font-size: 35px;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  color: white;
+  text-align: initial;
+}
+
+h2 {
+  color: #00ff10;
+  margin-top: -14px;
+  text-align: initial;
+}
+
+
+.slotsinfo {
+  color: rgb(189, 37, 194);
+  background-color: #ffd9e9;
+  width: 40vw;
+}
+
+
+.texty {
+  font-weight: bold;
+  color: blueviolet;
+  border: 2px solid whitesmoke;
+  padding: 1rem;
+  border-radius: 8px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  margin: 2rem;
+  box-shadow: 0 0 20px #eee;
+  font-size: 17px;
+  outline: none;
+  width: 37vw;
+  margin-top: 30px;
+}
+
+.btn-1 {
+  background-image: linear-gradient(to right, #fc00ff 0%, #00dbde 51%, #fc00ff 100%);
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  font-weight: bold;
+  margin: 1.5rem auto;
+  width: 40vw;
+  font-size: 15px;
+  border: 2px solid black;
+  margin-top: 0px;
+}
+
+.btn-1:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.btn-2 {
+  background-image: linear-gradient(to right, #00C9FF 0%, #92FE9D 51%, #00C9FF 100%);
+  margin: 4px auto;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  /* display: block; */
+  font-weight: bold;
+  border: 2px solid black;
+  width: 40vw;
+}
+
+.btn-2:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: white;
+  text-decoration: none;
+  transform: scale(1.1);
+  cursor: pointer;
+
+}
+
+.thanks {
+  font-size: 25px;
+  margin: 0px 0px 15px;
+  color: white;
+  /* text-align: start; */
+  text-align: center;
+  width: 40vw;
+}
+
+
+.bold {
+  text-align: start;
+  font-size: 16px;
+}
+
+
+.btn-1,
+.btn-2,
+.texty {
+  margin-left: 0px;
+}
+
+
+.glow {
+  animation: flicker 1.5s infinite alternate;
+  color: rgb(173, 91, 20);
+  /* color: rgb(154, 42, 188); */
+  border-radius: 5px;
+  /* color: #ffd9e9; */
+}
+
+@keyframes flicker {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px #0fa,
+      0 0 80px #0fa,
+      0 0 90px #0fa,
+      0 0 100px #0fa,
+      0 0 150px #0fa;
+  
   }
-  to {
-    transform: rotate(360deg);
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
+}
+
+
+@media (max-width: 560px) {
+
+  .btn-1,
+  .btn-2 {
+    margin: 1.5rem auto;
+    width: 80vw;
+  }
+
+  .texty {
+    margin: 2rem auto;
+    margin-bottom: auto;
+    width: 80vw;
+    text-align: center;
+  }
+
+  .slotsinfo {
+    width: 90vw;
+    margin: 1rem auto;
+  }
+
+  .headings,.bold {
+    text-align: center;
+  }
+
+  .thanks {
+    margin-top: 23px;
+    text-align: center;
+    font-size: 18px;
+    width: 90vw;
+  }
+
+  .track{
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 970px) and (min-width: 560px) {
+
+  .btn-1,
+  .btn-2 {
+    margin: 1.5rem auto;
+    width: 50vw;
+  }
+
+  .texty {
+    margin: 2rem auto;
+    margin-bottom: auto;
+    width: 50vw;
+    text-align: center;
+  }
+
+  .slotsinfo {
+    width: 50vw;
+    margin: 1rem auto;
+  }
+
+  .headings,.bold {
+    text-align: center;
+  }
+
+  .thanks {
+    margin: auto;
+    margin-top: 23px;
+    text-align: center;
+    font-size: 18px;
+    width: 80vw;
+  }
+
+  .track{
+    visibility: hidden;
   }
 }
